--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,7 @@
 :root {
     --color-primary: #191d2b;
     --color-secondary: #27ae60;
-    --color-white: #ffffff;
+    --color-white: #fa9900;
     --color-black: #000;
     --color-grey0: #f8f8f8;
     --color-grey-1: #dbe1e8;
