--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,7 @@
 :root {
     --color-primary: #191d2b;
     --color-secondary: #27ae60;
-    --color-white: #fa9900;
+    --color-white: #ffffff;
     --color-black: #000;
     --color-grey0: #f8f8f8;
     --color-grey-1: #dbe1e8;
@@ -23,7 +23,7 @@
 
 .light-mode {
     --color-primary: #ffffff;
-    --color-secondary: #3b82f6;
+    --color-secondary: #fa9900;
     --color-white: #454e56;
     --color-black: #000;
     --color-grey0: #f8f8f8;
