feat: changes something

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,7 +113,7 @@ section {
 }
 .controls .control i {
     font-size: 1.2rem;
-    color: var(--color-grey-2);
+    color: var(--color-grey0);
     pointer-events: none;
 }
 .controls .active-btn {
@@ -121,7 +121,7 @@ section {
     transition: all 0.4s ease-in-out;
 }
 .controls .active-btn i {
-    color: var(--color-white);
+    color: var(--color-grey0);
 }
 
 .theme-btn {
@@ -960,6 +960,19 @@ section {
     .main-title h2 .bg-text {
         font-size: 4rem;
     }
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: var(--color-grey-5);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--color-secondary);
+    border-radius: 4px;
 }
 
 /*# sourceMappingURL=styles.css.map */
